--- a/src/GtaKeyboardHook/MainWindow.xaml
+++ b/src/GtaKeyboardHook/MainWindow.xaml
@@ -8,7 +8,20 @@
         Background="{DynamicResource MaterialDesignPaper}"
         FontFamily="pack://application:,,,/MaterialDesignThemes.Wpf;component/Resources/Roboto/#Roboto"
         mc:Ignorable="d"
-        Title="Key Binder" Height="800" Width="600">
+        Icon="https://i.ibb.co/CJ58Bdk/logo.png"
+        Title="KeyHub" Height="800" Width="600">
+    
+    <Window.Resources>
+        <Style TargetType="{x:Type Button}" x:Key="ImageButtonStyle">
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="{x:Type Button}">
+                        <ContentPresenter/>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+    </Window.Resources>
     
     <Grid>
         <Grid>
@@ -20,7 +33,9 @@
             </Grid.RowDefinitions>
             
             <Grid Grid.Row="0">
-                <Image Width="250" Height="80" Source="https://i.ibb.co/CJ58Bdk/logo.png" />
+                <Button Style="{StaticResource ImageButtonStyle}" Command="{Binding PlayerIntroSoundCommand}">
+                    <Image Width="250" Height="80" Source="https://i.ibb.co/CJ58Bdk/logo.png" />
+                </Button>
             </Grid>
             
             <Grid Grid.Row="1" Margin="30" HorizontalAlignment="Center">
