--- a/src/GtaKeyboardHook/MainWindow.xaml
+++ b/src/GtaKeyboardHook/MainWindow.xaml
@@ -10,64 +10,68 @@
         mc:Ignorable="d"
         Icon="https://i.ibb.co/CJ58Bdk/logo.png"
         Title="KeyHub" Height="800" Width="600">
-    
+
     <Window.Resources>
         <Style TargetType="{x:Type Button}" x:Key="ImageButtonStyle">
             <Setter Property="Template">
                 <Setter.Value>
                     <ControlTemplate TargetType="{x:Type Button}">
-                        <ContentPresenter/>
+                        <ContentPresenter />
                     </ControlTemplate>
                 </Setter.Value>
             </Setter>
         </Style>
     </Window.Resources>
-    
+
     <Grid>
         <Grid>
             <Grid.RowDefinitions>
-                <RowDefinition Height="*"></RowDefinition>
-                <RowDefinition Height="2*"></RowDefinition>
-                <RowDefinition Height="*"></RowDefinition>
-                <RowDefinition Height="*"></RowDefinition>
+                <RowDefinition Height="*" />
+                <RowDefinition Height="2*" />
+                <RowDefinition Height="*" />
+                <RowDefinition Height="*" />
             </Grid.RowDefinitions>
-            
+
             <Grid Grid.Row="0">
                 <Button Style="{StaticResource ImageButtonStyle}" Command="{Binding PlayerIntroSoundCommand}">
                     <Image Width="250" Height="80" Source="https://i.ibb.co/CJ58Bdk/logo.png" />
                 </Button>
             </Grid>
-            
+
             <Grid Grid.Row="1" Margin="30" HorizontalAlignment="Center">
                 <Grid.RowDefinitions>
-                    <RowDefinition></RowDefinition>
-                    <RowDefinition></RowDefinition>
-                    <RowDefinition></RowDefinition>
+                    <RowDefinition />
+                    <RowDefinition />
+                    <RowDefinition />
                 </Grid.RowDefinitions>
-                
+
                 <Grid Grid.Row="0">
-                    <Label FontSize="15" HorizontalContentAlignment="Center" Content="Hooked Key:"></Label>
-                    <ComboBox Height="25" Width="200" HorizontalContentAlignment="Center" ItemsSource="{Binding AvailableKeys}" SelectedItem="{Binding HookedKey}"></ComboBox>
+                    <Label FontSize="15" HorizontalContentAlignment="Center" Content="Hooked Key:" />
+                    <ComboBox Height="25" Width="200" HorizontalContentAlignment="Center"
+                              ItemsSource="{Binding AvailableKeys}" SelectedItem="{Binding HookedKey}" />
                 </Grid>
-                
+
                 <Grid Grid.Row="1">
-                    <Label  FontSize="15" HorizontalContentAlignment="Center" Content="X Coordinate:"></Label>
-                    <TextBox Height="25" Width="200" FontSize="15" TextAlignment="Center" Text="{Binding Path=CoordinateX, UpdateSourceTrigger=PropertyChanged}"></TextBox>
+                    <Label FontSize="15" HorizontalContentAlignment="Center" Content="X Coordinate:" />
+                    <TextBox Height="25" Width="200" FontSize="15" TextAlignment="Center"
+                             Text="{Binding Path=CoordinateX, UpdateSourceTrigger=PropertyChanged}" />
                 </Grid>
-                
+
                 <Grid Grid.Row="2">
-                    <Label FontSize="15" HorizontalContentAlignment="Center" Content="Y Coordinate:"></Label>
-                    <TextBox Height="25" Width="200" FontSize="15" TextAlignment="Center" Text="{Binding Path=CoordinateY, UpdateSourceTrigger=PropertyChanged}"></TextBox>
+                    <Label FontSize="15" HorizontalContentAlignment="Center" Content="Y Coordinate:" />
+                    <TextBox Height="25" Width="200" FontSize="15" TextAlignment="Center"
+                             Text="{Binding Path=CoordinateY, UpdateSourceTrigger=PropertyChanged}" />
                 </Grid>
             </Grid>
-            
+
             <Grid Grid.Row="2" HorizontalAlignment="Center">
-                <Label FontSize="15" HorizontalContentAlignment="Center" Content="Callback duration (ms):"></Label>
-                <TextBox Height="25" Width="200" FontSize="15" TextAlignment="Center" Text="{Binding Path=CallbackDuration, UpdateSourceTrigger=PropertyChanged}"></TextBox>
+                <Label FontSize="15" HorizontalContentAlignment="Center" Content="Callback duration (ms):" />
+                <TextBox Height="25" Width="200" FontSize="15" TextAlignment="Center"
+                         Text="{Binding Path=CallbackDuration, UpdateSourceTrigger=PropertyChanged}" />
             </Grid>
-            
+
             <Grid Grid.Row="3" HorizontalAlignment="Center">
-                <Button Content="Save Configuration" Command="{Binding SaveConfigurationCommand}"></Button>
+                <Button Content="Save Configuration" Command="{Binding SaveConfigurationCommand}" />
             </Grid>
         </Grid>
     </Grid>
