--- a/src/GtaKeyboardHook/MainWindow.xaml
+++ b/src/GtaKeyboardHook/MainWindow.xaml
@@ -9,7 +9,7 @@
         FontFamily="pack://application:,,,/MaterialDesignThemes.Wpf;component/Resources/Roboto/#Roboto"
         mc:Ignorable="d"
         Icon="pack://application:,,,/Resources/logo.png"
-        Title="KeyHub" Height="600" Width="700">
+        Title="KeyHub" Height="600" Width="700" MinHeight="600" MinWidth="700">
 
     <Window.Resources>
         <Style TargetType="{x:Type Button}" x:Key="ImageButtonStyle">
